public class Admin {
    private String password;
    private String username;

    public void showThreat() {
    }

    public void showLogEntry() {
    }

    public void usersConfig() {
    }
}