package SP4;


import SP3.User;
import SP4.utlity.FileIO;
import java.time.LocalDateTime;
import java.time.LocalTime;
import java.util.ArrayList;
import java.util.List;

public class SecuritySystem {
   private ArrayList<LogEntry> logEntries = new ArrayList<>();
   private ArrayList<Threat> threats = new ArrayList<>();

    Rules rule = new Rules();
    FileIO IO = new FileIO();

    public void addLogEntry(User user, LocalDateTime timestamp){
        LogEntry LE = new LogEntry(user.getUsername(), timestamp);
        logEntries.add(LE);

        // Prepares information
        ArrayList<String> establish = new ArrayList<>();
        for (LogEntry le : logEntries) {
            establish.add(le.getUsername() + ";" + le.getTimestamp());
        }

        // Saves information to CSV
        String path = "SP4/data/LogEntry.csv";
        String header = "username;timestamp";
        IO.saveData(establish, path, header);
    }

    public void addThreat(String type, ArrayList<LogEntry> relatedEntries, String severity, LocalDateTime timestamp, String description){
        Threat TT = new Threat(type, relatedEntries, severity, timestamp, description);
        threats.add(TT);

        // Prepares information
        ArrayList<String> establish = new ArrayList<>();
        for (Threat tt : threats) {
            establish.add(tt.getType() + ";" + tt.getRelatedEntries() + ";" +tt.getSeverity() + ";" +tt.getTimestamp() + ";" +tt.getDescription());
        }

        // Saves information to CSV
        String path = "SP4/data/Threat.csv";
        String header = "type;logEntryUsername;logEntryTimestamp;severity;timestamp;description";
        IO.saveData(establish, path, header);
    }

    public void bruteForce(User user, LocalDateTime timestamp) {
        user.setFailedAttempts(user.getFailedAttempts() + 1);
        int limit = 1;
        if (limit < user.getFailedAttempts()) {
            Threat BF = new Threat("Bruteforce", logEntries,"Moderate", timestamp, "Forcing entry has been detected");
            threats.add(BF);
            rule.bruteForceExecute(user);
        }
    }

    public void excessiveDeletion(User user, LocalDateTime timestamp) {
        





        /*
         user.setFilesDeleted(user.getFilesDeleted() + 1);
         final int limit = 15;
         if (limit < user.getFilesDeleted()) {
            Threat FD = new Threat("Files deleted", logEntries,"Severe", timestamp, "Excessive file deletion has been detected");
            threats.add(FD);
            rule.excessiveDeletionExecute(user);


        }

         */
    }

    public void offHoursLogin(User user, LocalDateTime timestamp) {
        LocalTime earliestHour = LocalTime.parse("08:00");
        LocalTime latestHour = LocalTime.parse("16:00");
        if (timestamp.toLocalTime().isBefore(earliestHour) || timestamp.toLocalTime().isAfter(latestHour)) {
            Threat OHL = new Threat("Off hours login", logEntries,"Mild", timestamp, "Unusual login time has been detected");
            threats.add(OHL);
            rule.offHoursLoginExecute(user);
        }
    }
}